# second_brain_summarizer

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  PLAN.md  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  run_yesterday.sh
.claude/: settings.local.json
docs/: gha-setup.md
src/second_brain/: main.py
src/second_brain/agent/: agent.py  llm.py  prompts.py
src/second_brain/core/: config.py  models.py
src/second_brain/services/: auth.py  calendar.py  drive.py
src/second_brain/tools/: calendar_tools.py  drive_tools.py
src/second_brain/utils/: parser.py
tests/: conftest.py  test_agent.py  test_calendar_tools.py  test_drive_service.py  test_drive_tools.py  test_parser.py  test_pipeline.py
tests/fixtures/: sample_dump.md
